added github online list

--- a/git.html
+++ b/git.html
@@ -24,7 +24,11 @@
                 <li>git add filename</li>
                 <li>git commit -m "YOUR MESSAGE HERE"</li>
             </ul>
-        <li></li>
+        <li>Adding to Github Online!
+            <ul>
+
+            </ul>
+        </li>
         <li></li>
     </ul>
     
