New commit with list github online

--- a/git.html
+++ b/git.html
@@ -17,13 +17,14 @@
                 <li>git init</li>
             </ul>
         </li>
-        <li>Git Tracks Changes</li>
+        <li>Git Tracks Changes
             <ul>
                 <li>Add Changes To Staging Area</li>
                 <li>Commit The Changes Made - With a Description</li>
                 <li>git add filename</li>
                 <li>git commit -m "YOUR MESSAGE HERE"</li>
             </ul>
+        </li>
         <li>Adding to Github Online!
             <ul>
 
