New Branch[1] commit

--- a/git.html
+++ b/git.html
@@ -27,7 +27,7 @@
         </li>
         <li>Adding to Github Online!
             <ul>
-
+                <li>We Can Push To Give Items And Pull To Get Items</li>
             </ul>
         </li>
         <li></li>
