just a commit for merging 2nd branch to master

--- a/git.html
+++ b/git.html
@@ -28,6 +28,7 @@
         <li>Adding to Github Online!
             <ul>
                 <li>We Can Push To Give Items And Pull To Get Items</li>
+                <li>Git Makes A TimeLine -> We Can Revert Back to Any Place We Want</li>
             </ul>
         </li>
         <li></li>
